# Graphics-Engine

./: CMakeLists.txt  GEMINI.md  README.md
.github/workflows/: build.yml
GameEngineSolution/: GameEngineSolution.slnx
GameEngineSolution/Assets/Scenes/: default.json  simple.json
GameEngineSolution/Assets/Shaders/: Skybox.hlsl  Standard.hlsl  UIPixelShader.hlsl
GameEngineSolution/Editor/: Editor.vcxproj
GameEngineSolution/Engine/: Engine.vcxproj  Engine.vcxproj.filters
GameEngineSolution/Engine/include/ECS/: Components.h  Entity.h  System.h  SystemManager.h
GameEngineSolution/Engine/include/Events/: EventBus.h
GameEngineSolution/Engine/include/Input/: Input.h
GameEngineSolution/Engine/include/Physics/: Collision.h
GameEngineSolution/Engine/include/Platform/: Window.h
GameEngineSolution/Engine/include/Renderer/: Camera.h  Material.h  MeshUtils.h  Renderer.h
GameEngineSolution/Engine/include/ResourceManagement/: JsonParser.h  ModelLoader.h  SceneLoader.h  Shader.h
GameEngineSolution/Engine/include/UI/: Crosshair.h  DebugUIRenderer.h  SimpleFont.h  UIRenderer.h
GameEngineSolution/Engine/include/Utils/: EnginePCH.h  Logger.h  Transform.h
GameEngineSolution/Engine/src/Input/: Input.cpp
GameEngineSolution/Engine/src/Renderer/: BloomEffect.cpp  Camera.cpp  Graphics.cpp  Material.cpp  Mesh.cpp  PostProcess.cpp  Renderer.cpp  Skybox.cpp
GameEngineSolution/Engine/src/ResourceManagement/: AssetManager.cpp  FontLoader.cpp  JsonParser.cpp  ModelLoader.cpp  SceneLoader.cpp  TextureLoader.cpp
GameEngineSolution/Engine/src/UI/: Crosshair.cpp  ImmediateGUI.cpp  SimpleFont.cpp  UIRenderer.cpp
GameEngineSolution/Game/: Game.vcxproj  Game.vcxproj.filters
GameEngineSolution/Game/include/Application/: Game.h  Scene.h
GameEngineSolution/Game/include/Config/: GameConfig.h
GameEngineSolution/Game/include/Systems/: HealthSystem.h  PlayerMovementSystem.h  ProjectileSystem.h  WeaponSystem.h
GameEngineSolution/Game/src/: main.cpp
GameEngineSolution/Game/src/Application/: Game.cpp  Scene.cpp
GameEngineSolution/Game/src/Systems/: HealthSystem.cpp  PlayerMovementSystem.cpp  ProjectileSystem.cpp  WeaponSystem.cpp
GameEngineSolution/GameEngineProject/: GameEngineProject.vcxproj
GameEngineSolution/GameEngineProject/Assets/Scenes/: default.json  simple.json
GameEngineSolution/GameEngineProject/Assets/Shaders/: GaussianBlur.hlsl
GameEngineSolution/GameEngineProject/include/Application/: Game.h  Scene.h
GameEngineSolution/GameEngineProject/include/ECS/: ComponentManager.h  Components.h
GameEngineSolution/GameEngineProject/include/EntityComponentSystem/: Bullet.h  GameObject.h  Gun.h  HealthObject.h  Player.h
GameEngineSolution/GameEngineProject/include/Input/: Input.h
GameEngineSolution/GameEngineProject/include/Physics/: Collider.h  PhysicsBody.h  PhysicsConstants.h  PhysicsSystem.h
GameEngineSolution/GameEngineProject/include/Renderer/: BloomEffect.h  Graphics.h  Material.h  Mesh.h  PostProcess.h  Renderer.h  Skybox.h
GameEngineSolution/GameEngineProject/include/ResourceManagement/: AssetManager.h  FontLoader.h  JsonParser.h  SceneLoader.h  TextureLoader.h
GameEngineSolution/GameEngineProject/include/UI/: UIRenderer.h
GameEngineSolution/GameEngineProject/src/: Bullet.cpp  Collider.cpp  Crosshair.cpp  Game.cpp  GameObject.cpp  Graphics.cpp  Gun.cpp  HealthObject.cpp  Input.cpp  Logger.cpp  Mesh.cpp  ModelLoader.cpp  PhysicsSystem.cpp  Player.cpp  PostProcess.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SimpleFont.cpp  TextureLoader.cpp  Transform.cpp  main.cpp
GameEngineSolution/GameEngineProject/src/Application/: Game.cpp  Scene.cpp
GameEngineSolution/GameEngineProject/src/ECS/: ComponentManager.cpp
GameEngineSolution/GameEngineProject/src/EntityComponentSystem/: Bullet.cpp  Camera.cpp  GameObject.cpp  Gun.cpp  HealthObject.cpp  Player.cpp
GameEngineSolution/GameEngineProject/src/Input/: Input.cpp
GameEngineSolution/GameEngineProject/src/Physics/: Collider.cpp  PhysicsBody.cpp  PhysicsSystem.cpp
GameEngineSolution/GameEngineProject/src/Platform/: Window.cpp
GameEngineSolution/GameEngineProject/src/Renderer/: BloomEffect.cpp  Graphics.cpp  Mesh.cpp  PostProcess.cpp  Renderer.cpp  Skybox.cpp
GameEngineSolution/GameEngineProject/src/ResourceManagement/: JsonParser.cpp  ModelLoader.cpp  SceneLoader.cpp  Shader.cpp
GameEngineSolution/GameEngineProject/src/UI/: DebugUIRenderer.cpp  UIRenderer.cpp
GameEngineSolution/GameEngineProject/src/Utils/: Logger.cpp  Transform.cpp
GameEngineSolution/GameEngineProject/src/include/: BloomEffect.h  Camera.h  Collider.h  Collision.h  Crosshair.h  EnginePCH.h  (+14 more)
vs/Graphics Engine/: Graphics Engine.slnx
vs/Graphics Engine/Graphics Engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Camera.cpp  Camera.h  EnginePCH.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Graphics Engine.vcxproj  Graphics Engine.vcxproj.filters  Graphics.cpp  Graphics.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  PostProcess.cpp  Renderer.cpp  Renderer.h  Shader.cpp  SimpleFont.cpp  Skybox.cpp  Skybox.h  TextureLoader.cpp  TextureLoader.h  Window.cpp  main.cpp
vs/Graphics Engine/Graphics Engine/Assets/Models/: room.mtl
vs/Graphics Engine/Graphics Engine/Assets/Shaders/: BrightPass.hlsl  PostProcess.hlsl  Standard.hlsl
vs/Graphics Engine/Graphics Engine/Shaders/: Debug.hlsl  Shadow.hlsl  Skybox.hlsl  UIPixelShader.hlsl  UIVertexShader.hlsl
vs/Graphics Engine/Graphics Engine/src/: AssetManager.cpp  BloomEffect.cpp  Bullet.cpp  Camera.cpp  FontLoader.cpp  Game.cpp  GameObject.cpp  Graphics.cpp  Gun.cpp  HealthObject.cpp  Material.cpp  Mesh.cpp  ModelLoader.cpp  PhysicsBody.cpp  Player.cpp  PostProcess.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SimpleFont.cpp  Skybox.cpp  UIRenderer.cpp  Window.cpp
vs/Graphics Engine/Graphics Engine/src/include/: BloomEffect.h  Bullet.h  Camera.h  Collision.h  EnginePCH.h  FontLoader.h  Game.h  GameObject.h  Graphics.h  Gun.h  Material.h  Mesh.h  PhysicsBody.h  Player.h  PostProcess.h  Renderer.h  RenderingConstants.h  Scene.h  Shader.h  SimpleFont.h  Window.h
(+22 files in other folders)
